# JobHelperAgents

./: .gitignore  .python-version  JobHelperAgents-JobPostings.ods  JobHelperAgents.code-workspace  README.md  agents.py  agno-job-hunter-v2.commit.seda  app.py  debug_sheet.py  debug_sheet_verbose.py  hello_qwen.py  main.py  models.py  pyproject.toml  requirements.txt  team.py  verify_real_run.py  workflows.py
.agent/rules/: agno.md
.cursor/rules/: openmemory.mdc
.zed/: EXECUTIVE_SUMMARY.md  MIGRATION.md  README.md  custom-instructions.md  debug.json  tasks.json
.zed/examples/: rule-format-examples.md
.zed/scripts/: compress-rules.py
docs/plan/: Agno Agent Team_ Automated Job Hunter Implementation Plan.md
scripts/: create-svc-acct-creds.ps1
seda_drop/: agno_job_hunter_installer.seda  team.py
seda_drop/tools/: email_tools.py  google_sheets.py  job_spy_tool.py
tests/: test_rating_logic.py
tools/: email_tools.py  google_sheets.py  job_spy_tool.py
